k8s/base/ingresses/identity-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-api
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-api
                port:
                  number: 80
